<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="item_top_headlines">Item Top Headlines</string>
    <string name="source">Source</string>
    <string name="welcome">Welcome</string>
    <string name="explore_news">Explore News</string>
    <string name="suara">Suara</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id felis dui. Sed finibus feugiat diam et pulvinar. Nam fringilla in nibh et pretium. Nunc in mollis est. Aenean euismod, purus eget faucibus tincidunt, magna nisi laoreet risus, hendrerit rhoncus ipsum lorem sed lacus. Donec in ullamcorper elit. Donec faucibus nibh sagittis, ultricies neque vel, sagittis sem. Sed tristique velit dui, vitae finibus ante blandit sed. Ut quis felis ac eros semper molestie. Morbi dolor quam, vestibulum consectetur enim eu, iaculis pretium nisi. Sed libero mauris, blandit id libero ut, facilisis pulvinar lacus. Maecenas bibendum, est non tempor fringilla, erat orci pulvinar lacus, sit amet vehicula quam mi nec dui. Integer sagittis ac odio non tempus. Ut purus dui, interdum cursus eros dignissim, laoreet condimentum augue. Fusce scelerisque facilisis sapien a ornare. Phasellus condimentum urna id fringilla luctus. Maecenas at ex est. Quisque sed massa lectus. Fusce ornare porttitor bibendum. Maecenas rhoncus velit ut pellentesque ornare. Nulla fringilla eros augue, id commodo nulla scelerisque ac. Mauris nec viverra enim, malesuada sagittis turpis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; In hac habitasse platea dictumst. Suspendisse potenti. Vestibulum vel ullamcorper sem, ac ultrices massa. Nullam ac justo venenatis, venenatis libero nec, consequat lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam laoreet quis magna eu blandit. Vestibulum id lectus eu turpis luctus egestas quis interdum massa. Aliquam dui lacus, tempus at ante eget, scelerisque lobortis urna. Cras blandit, nisi et hendrerit tincidunt, mi libero pellentesque ipsum, ac ornare tellus quam ut mi. Praesent varius placerat nisl in elementum. Vestibulum bibendum imperdiet vehicula. Cras mollis eleifend tristique. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec ultricies viverra ipsum quis faucibus. Sed ac velit augue. Duis arcu nisl, venenatis ac elit eu, varius pulvinar ante. Phasellus aliquet massa eu dui lacinia, ac consectetur risus dapibus. Donec vel dolor leo. Curabitur venenatis risus auctor ligula convallis gravida. Morbi gravida purus nec elit aliquet aliquam. Etiam eget felis congue erat placerat interdum. Quisque non molestie massa. Morbi quis est non orci dignissim pellentesque at auctor ex. Sed pretium libero quis ex varius porta. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent aliquam sem eget erat rhoncus gravida. Quisque scelerisque, augue condimentum porttitor scelerisque, metus purus tincidunt urna, aliquet ultricies diam mi quis ante. Maecenas id rutrum velit, eget eleifend massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur pellentesque ipsum non ultrices blandit. Sed eget efficitur justo. Integer porta dolor tortor, nec euismod ante luctus quis. Nunc augue lorem, efficitur ac ornare eu, fermentum vel odio. Phasellus vel ligula et urna lobortis ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse et sapien leo. Curabitur ut mauris tincidunt, suscipit erat a, tempor lorem. Nulla facilisi. Aliquam finibus accumsan blandit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent volutpat justo et facilisis pulvinar.</string>
    <string name="title_news">Title News</string>
    <string name="source_news">Source News</string>
    <string name="date_news">Date News</string>
    <string name="go_to_official_website">Go To Website</string>
    <string name="anda_belum_punya_favorite">Anda Belum Punya Favorite</string>
    <string name="news">News</string>
    <string name="app">App</string>
    <string name="publish_at">Publish At</string>
    <string name="image_news">Image News</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="search_by_title">Search by Title</string>
    <string name="image_detik">Image Detik</string>
    <string name="liputan_6">Liputan 6</string>
    <string name="indonesian_s_news">Indonesian\'s News</string>
    <string name="recent_search">Recent Search</string>
    <string name="error">error</string>
    <string name="bookmark">Bookmark</string>
    <string name="domain_news">Domain News</string>
    <string name="search">Search</string>
    <string name="splash">Splash</string>
    <string name="category">Category</string>
    <string name="test">test</string>
    <string name="error_message">Error Message</string>
    <string name="list_is_null">List Is Null</string>


    <string name="sign_in">Sign-In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="regsiter_here">Regsiter Here</string>
    <string name="nama">Nama</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="close">Close</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password">Old Password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="or">OR</string>
    <string name="image_user">Image User</string>
    <string name="user">User</string>
    <string name="default_text">-</string>
</resources>