<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashActivity">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:background="@drawable/bg_splash_image"
        android:layout_height="120dp"
        android:contentDescription="@string/splash"
        android:layout_marginBottom="20dp"
        android:src="@drawable/news_splash"/>
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        style="@style/FontColor"
        android:text="@string/news"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app"
        style="@style/FontColor"
        android:fontFamily="@font/poppins_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>