<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="ui.auth.login.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/sign_in"
                android:layout_marginBottom="20dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@android:color/darker_gray"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:textSize="@dimen/subtitle_1"
                android:background="@drawable/bg_edit_text"
                android:inputType="textWebEmailAddress"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/darker_gray"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                android:layout_marginTop="@dimen/normal_100"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/password"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:paddingBottom="16dp"
                    android:textSize="@dimen/subtitle_1"
                    android:paddingEnd="16dp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="@dimen/caption"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_forgot_pass"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="@dimen/subtitle_1"
                android:textAllCaps="true"
                android:background="@drawable/bg_btn_primary"
                android:text="@string/login"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/button_google"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_btn_google"
                android:gravity="center"
                android:elevation="5dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/social"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-medium"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:paddingTop="16dp"
                android:text="@string/don_t_have_an_account"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regsiter_here"
                android:textColor="@android:color/holo_blue_bright"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>