<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.auth.changepassword.ChangePasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:elevation="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageButton
            android:id="@+id/btn_close_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_close"
            android:layout_marginStart="@dimen/normal_100"
            android:contentDescription="@string/close" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/normal_100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/normal_150"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_placeholder"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/normal_100">

                <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="@dimen/subtitle_1"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/normal_100">

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/new_password"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textSize="@dimen/subtitle_1"
                    android:paddingEnd="@dimen/normal_100"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/normal_100">

                <EditText
                    android:id="@+id/et_confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/confirm_new_password"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="@dimen/subtitle_1"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn_primary"
                android:layout_marginTop="@dimen/normal_175"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>