<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".ui.detail.DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            app:elevation="0dp">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tbDetail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:elevation="0dp"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/image_news"
                        android:layout_width="match_parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_height="200dp"
                        android:padding="50dp"
                        android:src="@drawable/ic_baseline_broken_image_24"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/title_news"
                            app:layout_constraintTop_toTopOf="parent"
                            android:fontFamily="@font/poppins_bold"
                            android:textSize="20sp"
                            android:padding="10dp"
                            app:layout_constraintEnd_toStartOf="@id/bookmark"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/source_news"
                            style="@style/FontColor"
                            android:text="@string/title_news"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/source_news"
                            app:layout_constraintTop_toBottomOf="@id/title_news"
                            app:layout_constraintStart_toStartOf="parent"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textSize="14sp"
                            android:fontFamily="@font/poppins_light"
                            android:textColor="@android:color/darker_gray"
                            android:text="@string/source_news"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/date_news"
                            app:layout_constraintTop_toBottomOf="@id/source_news"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_width="wrap_content"
                            android:paddingStart="20dp"
                            android:fontFamily="@font/poppins_light"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="12sp"
                            android:paddingEnd="20dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/date_news"
                            android:layout_height="wrap_content"/>
                        <ImageView
                            android:id="@+id/bookmark"
                            android:src="@drawable/ic_baseline_bookmark_border_24"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/title_news"
                            app:layout_constraintTop_toTopOf="@id/title_news"
                            app:layout_constraintBottom_toBottomOf="@id/title_news"
                            android:layout_marginEnd="20dp"
                            android:layout_width="40dp"
                            android:layout_height="40dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <ScrollView
                android:id="@+id/scroll_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/content_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="16sp"
                    style="@style/FontColor"
                    android:padding="20dp"
                    android:text="@string/lorem_ipsum"/>

            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>